Fix contrast on darkmode links

--- a/css/jk2017.css
+++ b/css/jk2017.css
@@ -42,8 +42,7 @@ a:hover {
     color: #bbb;
   }
 
-  .post-list a .post-link,
-  a {
+  .post-list a .post-link {
     color: #7ee9ae;
   }
 
